# ASTI

./: .gitignore  ARDUINO_NANO_ESP32_SETUP.md  BASELINE_STATUS_SEPTEMBER_27_2025.md  CLAUDE.md  CMakeLists.txt  COMMANDS.md  COMMAND_PROCESSOR_DESIGN.md  COMPACTAST_OPERATOR_LOADING_BUG.md  CPackConfig.cmake  CPackSourceConfig.cmake  CROSS_PLATFORM_TESTING_METHODOLOGY.md  CTestTestfile.cmake  DIAGNOSIS_Test96_Segfault.md  DIAGNOSTIC_TEST_IMPLEMENTATIONS.cpp  FAILURE_PATTERN_ANALYSIS.md  HANDOFF_DOCUMENTATION.md  HANDOFF_Test42_Investigation_September26_2025.md  HANDOFF_Test96_Investigation_September27_2025.md  IMPLEMENTATION_GUIDE_Test96_Segfault.md  Interpreter_Refactor_Proposal.md  PRODUCTION_ARCHITECTURE_PROPOSAL.md  PRODUCTION_MIGRATION_PLAN.md  README.md  SEGFAULT_ANALYSIS.md  SEGFAULT_DIAGNOSIS.md  TEST20INFO.md  Test43_Investigation_Complete_Documentation.md  Test96_optional_return_full.patch  ULTRA_MINIMAL_JSON_WORKFLOW.md  claude_review.txt  compact_ast_analysis.md  convert_flexiblecommand.py  cpp_json_to_array.sh  debug_compactast_children.cpp  debug_export_flags.js  debug_js_ast.js  debug_operator_structure.js  debug_simple_converter.cpp  debug_test43  debug_test43.cpp  (+41 more)
.claude/: settings.local.json
.githooks/: pre-commit
agents/: category_test_runner.js  failure_pattern_analyzer.js  regression_detector.js  smart_diff_analyzer.js
arduino_library_package/: INSTALLATION_INSTRUCTIONS.txt  PACKAGE_SUMMARY.txt  QUICK_START.txt
build_wasm/: arduino_interpreter.js  arduino_interpreter.wasm  arduino_interpreter_debug.js
docs/: BREAKTHROUGH_Test20_Victory_September_22_2025.md  CHANGELOG.md  CONTRIBUTING_AI.md  CPP_ASSESSMENT_REPORT.md  CRITICAL_JavaScript_Reference_Data_Corruption.md  CROSS_PLATFORM_REMEDIATION_PLAN.md  CompactAST_ArrayAccess_Fix.md  Context_Recovery_Guide.md  Context_Recovery_Summary.md  ESP32_DEPLOYMENT_GUIDE.md  Enhanced_Testing_Infrastructure.md  FLEXIBLE_COMMAND_BREAKTHROUGH.md  HANDOFF_SESSION_September_22_2025_96_Percent_Success.md  HANDOFF_Systematic_Cross_Platform_Validation_September_22_2025.md  INTERPRETER_ARCHITECTURE_PLAN.md  PHASE1_ULTRATHINK_PLAN.md  PHASE2_ULTRATHINK_PLAN.md  PHASE3_ULTRATHINK_PLAN.md  PHASE5_ULTRATHINK_PLAN.md  PHASE6_ULTRATHINK_PLAN.md  PHASE7_ULTRATHINK_PLAN.md  PROJECT_STATUS_September_26_2025.md  RTTI_REMOVAL_ASSESSMENT.md  SYNCHRONOUS_VS_ASYNC_ARCHITECTURE.md  Session_Analysis_September_22_2025.md  Session_Handoff_September_20_2025.md  THREE_PROJECT_ARCHITECTURE.md  Test102_CastExpression_Investigation.md  Test105_MultidimensionalArrays_Investigation.md  Test106_FunctionPointers_Investigation.md  Test107_ULTRATHINK_PLAN.md  Test107_UnaryOperators_Investigation.md  Test110_Structs_Investigation.md  Test110_ULTRATHINK_PLAN.md  Test113_Implementation_Plan.md  Test113_PointerArithmetic_Investigation.md  Test113_Session_October4_Complete.md  Test114_DesignatedInitializers_Investigation.md  Test116_TypedefAndPointers_Investigation.md  Test122_SizeofOperator_Investigation.md  (+18 more)
playgrounds/: interpreter_playground.html  parser_playground.html  wasm_interpreter_playground.html
scripts/: ast_to_c_array.sh  build_wasm.sh  build_wasm_debug.sh  impact_assessment.sh  memory_leak_check.sh  performance_check.sh  smart_diff_analyzer.sh  validate_wasm_size.sh
shared/: MockDataConfig.json
src/: ArduinoASTInterpreter.h  CompactAST.cpp  CompactAST.hpp
temp/: coredump_strings.txt
test_data/: example_000.commands  example_001.commands  example_002.arduino  example_002.commands  example_003.arduino  example_003.commands  example_004.commands  example_005.arduino  example_005.commands  example_006.arduino  example_006.commands  example_007.arduino  example_007.commands  example_008.commands  example_009.commands  example_010.arduino  example_010.commands  example_011.ast  example_011.commands  example_012.arduino  example_012.ast  example_012.commands  example_013.arduino  example_013.commands  example_014.arduino  example_014.commands  example_015.commands  example_016.commands  example_017.commands  example_018.commands  example_019.commands  example_020.ast  example_020.commands  example_021.commands  example_022.commands  example_023.commands  example_024.commands  example_025.commands  example_026.commands  example_027.commands  (+271 more)
test_data_backup/: example_001.commands  example_003.commands  example_004.commands  example_008.arduino  example_011.arduino  example_011.commands  example_012.commands  example_013.commands  example_015.commands  example_018.commands  example_019.commands  example_022.commands  example_023.commands  example_026.commands  example_029.commands  example_035.commands  example_038.commands  example_041.commands  example_044.ast  example_046.commands  example_050.commands  example_052.commands  example_053.commands  example_056.commands  example_057.commands  example_059.commands  example_061.commands  example_067.commands  example_070.commands  example_071.commands  example_073.ast  example_073.commands  example_075.commands  example_076.commands  example_078.commands  example_079.ast  example_084.commands  example_086.ast  example_086.commands  example_090.commands  (+21 more)
tests/: DeterministicDataProvider.hpp  comprehensive_loop_memory_test.cpp  comprehensive_loop_test_sketch.ino  continuous_execution_test.cpp  examples.js  extended_continuous_test.cpp  extract_cpp_commands.cpp  generate_test_data.js  loop_memory_test.cpp  run_baseline_validation.sh  test_state_machine.cpp  test_utils.hpp  test_wasm_ast_format.js  test_wasm_basic.js  test_wasm_interpreter_minimal.js  test_wasm_memory.js  test_wasm_standalone.js  test_writeArrayToMemory.js  universal_json_to_arduino.cpp  validate_cross_platform.cpp
tools/: ast_to_c_array.sh
trash/: ARRAY_HANDLING_SESSION_PROGRESS.md  BREAKTHROUGH_SESSION_SUMMARY.md  CRITICAL_FILES_BACKUP.md  CROSS_PLATFORM_PARITY_REPORT.md  CommandProtocol.cpp  CommandProtocol.hpp  DeterministicMockProvider.hpp  FlexibleCommand.hpp  HANDOFF_Systematic_Cross_Platform_Validation_September_22_2025.md  HANDOFF_Test42_Investigation_September26_2025.md  NEXT_SESSION_INSTRUCTIONS.md  (+146 more)
(+648 files in other folders)
